esp_OTA_SMT32/build/log/idf_py_stdout_output_10376
[1/14] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\esp_OTA_SMT32\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/esp_OTA_SMT32/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/12] Building C object esp-idf/processing_HEX/CMakeFiles/__idf_processing_HEX.dir/processing_data_of_file_hex.c.obj
[3/12] Building C object esp-idf/HostOTA_ESP32/CMakeFiles/__idf_HostOTA_ESP32.dir/OTAHost_esp32.c.obj
FAILED: esp-idf/HostOTA_ESP32/CMakeFiles/__idf_HostOTA_ESP32.dir/OTAHost_esp32.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp/esp_OTA_SMT32/build/config -ID:/esp/esp_OTA_SMT32/component/HostOTA_ESP32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_timer/include -ID:/esp/esp_OTA_SMT32/component/Min -ID:/esp/esp_OTA_SMT32/component/processing_HEX -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fmax-include-depth=500 -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp/esp_OTA_SMT32=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/HostOTA_ESP32/CMakeFiles/__idf_HostOTA_ESP32.dir/OTAHost_esp32.c.obj -MF esp-idf\HostOTA_ESP32\CMakeFiles\__idf_HostOTA_ESP32.dir\OTAHost_esp32.c.obj.d -o esp-idf/HostOTA_ESP32/CMakeFiles/__idf_HostOTA_ESP32.dir/OTAHost_esp32.c.obj -c D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.c
D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.c: In function 'otaStart':
D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.c:161:25: error: pointer targets in passing argument 1 of 'copy_array' differ in signedness [-Werror=pointer-sign]
  161 |             copy_array( data_line,data_of_hex.Header_hex,
      |                         ^~~~~~~~~
      |                         |
      |                         char *
In file included from D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.h:12,
                 from D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.c:1:
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.h:15:32: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
   15 | void copy_array(const uint8_t *source, uint8_t *destination, size_t length, size_t start_pos_src, size_t start_pos_dst, uint8_t length_source, uint8_t length_destination);
      |                 ~~~~~~~~~~~~~~~^~~~~~
D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.c:165:25: error: pointer targets in passing argument 1 of 'copy_array' differ in signedness [-Werror=pointer-sign]
  165 |             copy_array( data_line,data_of_hex.Data_hex,
      |                         ^~~~~~~~~
      |                         |
      |                         char *
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.h:15:32: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
   15 | void copy_array(const uint8_t *source, uint8_t *destination, size_t length, size_t start_pos_src, size_t start_pos_dst, uint8_t length_source, uint8_t length_destination);
      |                 ~~~~~~~~~~~~~~~^~~~~~
D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.c:239:13: error: 'line' undeclared (first use in this function)
  239 |             line = strtok(NULL, "\n"); // Lấy dòng tiếp theo
      |             ^~~~
D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.c:239:13: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: some warnings being treated as errors
[4/12] Linking C static library esp-idf\processing_HEX\libprocessing_HEX.a
[5/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp_OTA_SMT32.c.obj
ninja: build stopped: subcommand failed.
